--- a/calc_1.html
+++ b/calc_1.html
@@ -7,7 +7,7 @@
 
 <body>
     <div style="border: 1px;"><p style="background-color:#6456a6;">
-    <h1>Reshant Calculator</h1></div>
+    <h1>Vaibhav Calculator</h1></div>
     <hr>
     <form method="POST" action="/calculate">
             <input type="text" name="num1" placeholder="Enter a number" required>
